--- a/docs/4/modules/hidechans.yml
+++ b/docs/4/modules/hidechans.yml
@@ -14,10 +14,17 @@ configuration:
     default: 'No'
     description: |-
       Whether server operators are affected by the user mode.
+  - name: hideservices
+    type: Boolean
+    required: false
+    default: 'Yes'
+    description: |-
+      Whether to hide the channels of services pseudoclients from all users.
   details: ""
   example: |-
     ```xml
-    <hidechans affectsopers="no">
+    <hidechans affectsopers="no"
+               hideservices="yes">
     ```
 
 umodes:
