--- a/docs/4/modules/messageflood.yml
+++ b/docs/4/modules/messageflood.yml
@@ -17,10 +17,9 @@ configuration:
   - name: message
     type: String
     required: false
-    default: Message flood (trigger is %messages% messages in %duration%)
+    default: Message flood detected (trigger is %messages% messages in %duration%)
     description: |-
       The message to use when punishing users that hit the message flood trigger.
-
   - name: notice
     type: Decimal
     required: false
@@ -51,7 +50,7 @@ configuration:
   example: |-
     ```xml
     <messageflood extended="yes"
-                  message="Message flood (trigger is %lines% messages in %duration%)"
+                  message="Message flood detected (trigger is %lines% messages in %duration%)"
                   notice="1.0"
                   privmsg="1.0"
                   tagmsg="0.2">
