Update for the changes in v4.6.0.

--- a/docs/3/commands/_kline.yml
+++ b/docs/3/commands/_kline.yml
@@ -1,1 +1,21 @@
-../../4/commands/_kline.yml
+name: KLINE
+oper_only: true
+syntax: >-
+  <ident@host>[,<ident@host>]+ [<duration> <reason>]
+description: |-
+  If `<duration>` and `<reason>` are specified then bans an ident@host mask from connecting to the local server. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero then the K-line will be permanent.
+
+  Otherwise, if just `<ident@host>` is specified, removes a local server ban on an ident@host mask.
+example:
+- description: |-
+    K-lines sadie@example.com for one day with the reason "Testing"
+  text: |-
+    /KLINE sadie@example.com 1d :Testing
+- description: |-
+    K-lines sadie@example.com for one day with the reason "Testing"
+  text: |-
+    /KLINE sadie@example.com 86400 :Testing
+- description: |-
+    Removes a K-line on sadie@example.com
+  text: |-
+    /KLINE sadie@example.com
