--- a/docs/4/commands/_gline.yml
+++ b/docs/4/commands/_gline.yml
@@ -1,9 +1,9 @@
 name: GLINE
 oper_only: true
 syntax: >-
-  <ident@host>[,<ident@host>]+ [<duration> <reason>]
+  <ident@host>[,<ident@host>]+ [[<duration>] <reason>]
 description: |-
-  If `<duration>` and `<reason>` are specified then bans an ident@host mask from connecting to the network. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero then the G-line will be permanent.
+  If `<ident@host> and `<reason>` are specified then bans an ident@host mask from connecting to the network. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero or (since v4.6.0) is not specified then the G-line will be permanent.
 
   Otherwise, if just `<ident@host>` is specified, removes a network-wide ban on an ident@host mask.
 example:
