--- a/docs/4/modules/cban.yml
+++ b/docs/4/modules/cban.yml
@@ -7,7 +7,7 @@ commands:
 - name: CBAN
   param_count: 1-3
   oper_only: true
-  syntax: <channel> [<duration> [<reason>]]
+  syntax: <channel> [[<duration>] <reason>]
   description: |-
     Allows server operators to add and remove channel bans.
   example:
