--- a/docs/4/commands/_qline.yml
+++ b/docs/4/commands/_qline.yml
@@ -1,9 +1,9 @@
 name: QLINE
 oper_only: true
 syntax: >-
-  <nick>[,<nick>]+ [<duration> <reason>]
+  <nick>[,<nick>]+ [[<duration>] <reason>]
 description: |-
-  If `<duration>` and `<reason>` are specified then prevents a nickname from being used. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero then the Q-line will be permanent.
+  If `<nick>` and `<reason>` are specified then prevents a nickname from being used. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero or (since v4.6.0) is not specified then the Q-line will be permanent.
 
   Otherwise, if just `<nick>` is specified, removes a reservation on a nickname.
 example:
