--- a/docs/4/commands/_zline.yml
+++ b/docs/4/commands/_zline.yml
@@ -1,9 +1,9 @@
 name: ZLINE
 oper_only: true
 syntax: >-
-  <ipaddr>[,<ipaddr>]+ [<duration> <reason>]
+  <ipaddr>[,<ipaddr>]+ [[<duration>] <reason>]
 description: |-
-  If `<duration>` and `<reason>` are specified then bans an IP address or CIDR range from connecting to the network. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero then the Z-line will be permanent.
+  If `<ipaddr>` and `<reason>` are specified then bans an IP address or CIDR range from connecting to the network. The `<duration>` may be specified as a number of seconds or as a duration in the format 1y2w3d4h5m6s. If the duration is zero or (since v4.6.0) is not specified then the Z-line will be permanent.
 
   Otherwise, if just `<ipaddr>` is specified, removes a network-wide ban on an IP address.
 example:
