--- a/docs/4/modules/rline.yml
+++ b/docs/4/modules/rline.yml
@@ -42,7 +42,7 @@ commands:
 - name: RLINE
   param_count: 1, 3
   oper_only: true
-  syntax: <regex> [<duration> <reason>]
+  syntax: <regex> [[<duration>] <reason>]
   description: |-
     Allows server operators to add and remove regular expression bans on nickname!username@hostname+realname masks.
   example:
