Fix a typo in the name of the nickflood exemption.

--- a/docs/4/modules/nickflood.yml
+++ b/docs/4/modules/nickflood.yml
@@ -36,5 +36,5 @@ chmodes:
       /MODE #channel +F 3:5
 
 exemptions:
-- name: flood
+- name: nickflood
   description: Allows exempted users to change nicknames at a higher rate than channel mode `F` (nickflood) allows.
