--- a/docs/4/configuration/_connect.yml
+++ b/docs/4/configuration/_connect.yml
@@ -41,7 +41,7 @@ attributes:
 - name: globalmax
   type: Number
   required: false
-  default: '0'
+  default: '3'
   description: |-
     The maximum number of clones per host (see [`<cidr>`](#cidr)) that can be on the entire network for users in this connect class. Set to 0 for no limit.
 - name: hardsendq
@@ -59,7 +59,7 @@ attributes:
 - name: localmax
   type: Number
   required: false
-  default: '0'
+  default: '3'
   description: |-
     The maximum number of clones per host (see [`<cidr>`](#cidr)) that can be on the local server for users in this connect class. Set to 0 for no limit.
 - name: maxchans
@@ -107,7 +107,7 @@ attributes:
 - name: reason
   type: Text
   required: false
-  default: Unauthorised connection
+  default: You are not allowed to connect to this server.
   description: |-
     If `<connect:deny>` is set then the reason to give when disconnecting a user.
 - name: resolvehostnames
@@ -131,7 +131,7 @@ attributes:
 - name: threshold
   type: Number
   required: false
-  default: '10'
+  default: '20'
   description: |-
     The maximum amount of penalty that a user can have before being fakelagged or killed if fakelag is turned off.
 - name: timeout
