--- a/docs/4/modules/dnsbl.yml
+++ b/docs/4/modules/dnsbl.yml
@@ -148,7 +148,7 @@ configuration:
            records="3,5,6,7,8,9,10,11,13,14,15,16,17,19"
            action="zline"
            duration="7d"
-           reason="You are listed in DroneBL. Please visit https://dronebl.org/lookup.do?ip=%ip% for more information.">
+           reason="You are listed in DroneBL. Please visit https://dronebl.org/lookup?ip=%ip% for more information.">
     ```
 
     [EFnet RBL](https://rbl.efnetrbl.org) is a DNSBL of undesirable IP addresses detected by the [EFnet IRC Network](http://www.efnet.org/):
