--- a/docs/4/configuration/_type.yml
+++ b/docs/4/configuration/_type.yml
@@ -32,6 +32,12 @@ attributes:
   default: 'never'
   description: |-
     Whether to automatically log server operators using this type in when they connect to the server.
+- name: maxchans
+  type: Number
+  required: false
+  default: '20'
+  description: |-
+    If defined then the maximum number of channels that a server operator using this type can be in.
 - name: commands
   type: Text
   required: false
@@ -77,6 +83,7 @@ example: |-
         classes="BanControl HostCloak OperChat SACommands ServerLink Shutdown"
         vhost="staff.example.net"
         autologin="never"
+        maxchans="100"
         commands="-* KILL ZLINE"
         privs="users/auspex -servers/auspex"
         chanmodes="-*+P"
