--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -37,4 +37,5 @@ jobs:
       - name: Build the docs site
         if: github.event_name != 'push'
         run: |
+          source ./venv/bin/activate
           mkdocs build
