--- a/docs/server/messages/metadata.yml
+++ b/docs/server/messages/metadata.yml
@@ -17,22 +17,25 @@ description: |-
 extra: |-
   Some possible values for the key field are:
 
-  Name             | Type    | Description
-  ---------------- | ------- | -----------
-  accountid        | User    | The account identifier of the target user.
-  accountname      | User    | The account name of the target user.
-  accountnicks     | User    | A space-delimited list of nicknames associated with the target user's account.
-  auspex           | Channel | Enables services servers receiving messages for the target channel even when it has no users in it.
-  ctitle           | User    | The custom WHOIS title of the target user.
-  filter           | Server  | A filter entry which is set on the originating server.
-  gateway-realhost | User    | The hostname of the WebIRC gateway the target user connected via.
-  gateway-realip   | User    | The IP address of the WebIRC gateway the target user connected via.
-  mlock            | Channel | The modes which are locked on the target channel and can not be changed.
-  modules          | Server  | A module state change on the originating server.
-  operquit         | User    | The quit message to show to server operators when the tatget user quits.
-  swhois           | User    | The custom WHOIS message of the target user.
-  topiclock        | Channel | Marks the target channel as having an immutable topic.
-  webirc-gateway   | User    | The name of the WebIRC gateway that the target user connected via.
+  Name               | Type    | Module                                | Description
+  ------------------ | ------- | ------------------------------------- | -----------
+  accountid          | User    | services_account (v3)<br>account (v4) | The account identifier of the target user.
+  accountname        | User    | services_account (v3)<br>account (v4) | The account name of the target user.
+  accountnicks       | User    | services_account (v3)<br>account (v4) | A space-delimited list of nicknames associated with the target user's account.
+  auspex             | Channel | services (v4)                         | Enables services servers receiving messages for the target channel even when it has no users in it.
+  ctitle             | User    | customtitle                           | The custom WHOIS title of the target user.
+  filter             | Server  | filter                                | A filter entry which is set on the originating server.
+  gateway-realhost   | User    | cgiirc (v3)<br>gateway (v4)           | The hostname of the WebIRC gateway the target user connected via.
+  gateway-realip     | User    | cgiirc (v3)<br>gateway (v4)           | The IP address of the WebIRC gateway the target user connected via.
+  mlock              | Channel | mlock (v3)<br>services (v4)           | The modes which are locked on the target channel and can not be changed.
+  modules            | Server  | N/A                                   | A module state change on the originating server.
+  operquit           | User    | N/A                                   | The quit message to show to server operators when the tatget user quits.
+  swhois             | User    | swhois                                | The custom WHOIS message of the target user.
+  topiclock          | Channel | topiclock (v3), services (v4)         | Marks the target channel as having an immutable topic.
+  webirc-gateway     | User    | cgiirc (v3)<br>gateway (v4)           | The name of the WebIRC gateway that the target user connected via.
+  websocket-origin   | User    | websocket (v4)                        | The URL of the WebSocket origin the target user is connecting from.
+  websocket-realhost | User    | websocket (v4)                        | The hostname of the reverse proxy the target user connected via.
+  websocket-realip   | User    | websocket (v4)                        | The IP address of the reverse proxy the target user connected via.
 example:
 - description: |-
     Changes the mlock channel metadata for #chan to channel modes `n` (noextmsg) and `t` (topiclock)
